# TASK-76

./: .gitignore  metadata.json
repo/backend/: Cargo.toml  Dockerfile
repo/backend/migrations/: 001_initial_schema.sql  002_seed_data.sql
repo/backend/src/: lib.rs  main.rs
repo/backend/src/app/: state.rs
repo/backend/src/audit/: anchors.rs  chain.rs  mod.rs
repo/backend/src/auth/: csrf.rs  mod.rs  password.rs  session.rs
repo/backend/src/backup/: mod.rs
repo/backend/src/errors/: mod.rs
repo/backend/src/handlers/: admin.rs  assignments.rs  auth.rs  backup.rs  bays.rs  calendar.rs  exports.rs  mod.rs  reservations.rs  scan.rs  stores.rs  tickets.rs  uploads.rs  vehicles.rs
repo/backend/src/models/: mod.rs
repo/backend/src/repositories/: assignments.rs  audit.rs  backups.rs  bays.rs  mod.rs  permissions.rs  recovery_codes.rs  reservations.rs  stores.rs  tickets.rs  uploads.rs  users.rs  vehicles.rs
repo/backend/src/routes/: mod.rs
repo/backend/src/security/: encryption.rs  headers.rs  masking.rs  mod.rs
repo/backend/src/services/: crypto.rs  mod.rs  reservation_engine.rs  ticket_engine.rs  uploads.rs
repo/backend/src/uploads/: mod.rs
repo/backend/tests/: api_tests_runner.rs  integration_tests.rs  unit_tests_runner.rs
repo/backend/tests/api_tests/: http_helpers.rs  http_support.rs  test_api_admin.rs  test_api_assignments.rs  test_api_audit.rs  test_api_auth.rs  test_api_authz_matrix.rs  test_api_backup.rs  test_api_bays.rs  test_api_calendar.rs  test_api_exports.rs  test_api_reservations.rs  test_api_stores.rs  test_api_tickets.rs  test_api_uploads.rs  test_api_vehicles.rs
repo/backend/tests/common/: mod.rs
repo/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  package.json  playwright.config.ts
repo/frontend/src/: app.rs  lib.rs
repo/frontend/tests/: frontend_backend_e2e_spec.rs  frontend_behavior_spec.rs  frontend_state_behavior_spec.rs  frontend_utils_spec.rs  module_direct_coverage_spec.rs  router_spec.rs
(+57 files in other folders)
