[package]
name = "fleetreserve-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "fleetreserve_backend"
path = "src/lib.rs"

[[bin]]
name = "fleetreserve-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
aes-gcm = "0.10"
infer = "0.15"
thiserror = "1"
rqrr = "0.6"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
axum-test = "14"
tempfile = "3"
