[package]
name = "fleetreserve-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers", "Request", "RequestInit", "RequestMode",
    "Response", "Window", "Document", "HtmlInputElement",
    "HtmlTextAreaElement", "HtmlSelectElement", "File", "FileList",
    "FormData", "Blob", "UrlSearchParams", "console",
] }
js-sys = "0.3"
gloo-storage = "0.3"
gloo-timers = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
qrcodegen = "1"

[dev-dependencies]
serde_json = "1"
